engine-net-2/examples/Errors/ProcedureUnknownCompiled.grg
#include "Rules.grg"

sequence s1
{
	{ (d:double)=pp() }
}
